# pretty-hex

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: lib.rs  pretty_hex.rs
tests/: tests.rs
