[package]
name = "pretty-hex"
version = "0.1.1"
authors = ["Andrei Volnin <wolandr@gmail.com>"]
license = "MIT"
description = "Pretty hex dump of bytes slice in the common style."
readme = "README.md"
homepage = "https://github.com/wolandr/pretty-hex"
repository = "https://github.com/wolandr/pretty-hex"
categories = ["development-tools::debugging", "no-std"]
keywords = ["logging", "hex", "dump", "binary"]

[dependencies]

[features]
default = []
alloc = []
